[gd_scene load_steps=20 format=2]

[ext_resource path="res://World/Dungeon/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://World/Dungeon/DungeonTileSet32x32.tres" type="TileSet" id=2]
[ext_resource path="res://World/Dungeon/DungeonExit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/MudMonster/MudMonster.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/LargeEnergyPotion.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/ProceduralMazeLevel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/SmallEnergyPotion.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Dungeon/DungeonEntrance.tscn" type="PackedScene" id=11]
[ext_resource path="res://World/Hazards/Lava.tres" type="Texture" id=12]
[ext_resource path="res://Enemies/SlimeMonster/SlimeMonster.tscn" type="PackedScene" id=13]
[ext_resource path="res://Enemies/DarkWizard/DarkWizard.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enemies/Bat/Bat.tscn" type="PackedScene" id=15]
[ext_resource path="res://Enemies/LargeOrc/LargeOrc.tscn" type="PackedScene" id=16]
[ext_resource path="res://Music and Sounds/Fantasy Choir 1.wav" type="AudioStream" id=17]
[ext_resource path="res://Items/GoldenSword.tscn" type="PackedScene" id=20]
[ext_resource path="res://Items/IronSword.tscn" type="PackedScene" id=21]
[ext_resource path="res://Items/SteelClaymore.tscn" type="PackedScene" id=22]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray(  )
colors = PoolColorArray(  )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1

[node name="Dungeon" type="Node2D"]
script = ExtResource( 1 )

[node name="TheDarkness" type="Sprite" parent="."]
position = Vector2( -368, -33 )
scale = Vector2( 5000, 5000 )
texture = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( -64, -64 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( -64, -64, 564, 564 )

[node name="YSort" type="YSort" parent="."]

[node name="ProceduralMazeLevel" parent="YSort" instance=ExtResource( 6 )]
spacing = 3
tile_size = 32
height = 8
width = 8
percent_walls_to_remove = 30
minTreasure = 3
minEnemies = 3
entranceScene = ExtResource( 3 )
exitScene = ExtResource( 11 )
treasureSpawnLevels = [ 1, 5, 5, 10, 20 ]
treasureOptions = [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ]
enemySpawnLevels = [ 1, 2, 2, 5, 10 ]
enemyOptions = [ ExtResource( 4 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ) ]

[node name="FloorMap" parent="YSort/ProceduralMazeLevel" index="0"]
tile_set = ExtResource( 2 )
cell_tile_origin = 1
tile_data = PoolIntArray( 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 262149, 4, 0, 262152, 4, 0, 262155, 4, 0, 327685, 4, 0, 327688, 4, 0, 327691, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 458757, 4, 0, 458760, 4, 0, 458763, 4, 0, 524293, 4, 0, 524296, 4, 0, 524299, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0 )

[node name="WallsMap" parent="YSort/ProceduralMazeLevel" index="1"]
visible = true
tile_set = ExtResource( 2 )
cell_tile_origin = 2
cell_y_sort = true

[node name="DecorationsMap" parent="YSort/ProceduralMazeLevel" index="2"]
tile_data = PoolIntArray( 196613, 30, 0, 196615, 29, 0, 196616, 29, 0, 196617, 27, 0, 196618, 27, 0, 196619, 30, 0, 262149, 27, 0, 262152, 25, 0, 262155, 26, 0, 327685, 27, 0, 327688, 25, 0, 327691, 25, 0, 393221, 29, 0, 393222, 25, 0, 393223, 25, 0, 393225, 29, 0, 393226, 29, 0, 393227, 28, 0, 458757, 30, 0, 524293, 30, 0, 524296, 26, 0, 524299, 27, 0, 589829, 26, 0, 589830, 30, 0, 589831, 28, 0, 589832, 26, 0, 589833, 26, 0, 589834, 28, 0, 589835, 27, 0 )

[node name="CanvasModulate" type="CanvasModulate" parent="YSort"]
color = Color( 0, 0, 0, 1 )

[node name="Entrances" type="YSort" parent="YSort"]

[node name="Exits" type="YSort" parent="YSort"]

[node name="Treasures" type="YSort" parent="YSort"]

[node name="Enemies" type="YSort" parent="YSort"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -6.38
pitch_scale = 0.8
autoplay = true

[connection signal="addEnemies" from="YSort/ProceduralMazeLevel" to="." method="_on_ProceduralMazeLevel_addEnemies"]
[connection signal="addEntrance" from="YSort/ProceduralMazeLevel" to="." method="_on_ProceduralMazeLevel_addEntrance"]
[connection signal="addExits" from="YSort/ProceduralMazeLevel" to="." method="_on_ProceduralMazeLevel_addExits"]
[connection signal="addTreasure" from="YSort/ProceduralMazeLevel" to="." method="_on_ProceduralMazeLevel_addTreasure"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]

[editable path="YSort/ProceduralMazeLevel"]
